# Flipkart_Gridlock

./: .gitignore  DEVELOPMENT_HISTORY.md  README.md  pyproject.toml  requirements.txt
scripts/: run_analysis.py
src/Model/: data_loader.py  model.py  pipeline.py
src/flipkart_gridlock/: __init__.py  pipeline.py
src/flipkart_gridlock.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_data_loader.py  test_model.py  test_pipeline.py
