[project]
name = "flipkart_gridlock"
version = "0.1.0"
description = "Flipkart Gridlock challenge project"
readme = "README.md"
authors = [ { name = "Flipkart Gridlock" } ]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flipkart_gridlock*"]
